# dbt-schema-gen

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/dbt_schema_gen/: __init__.py  __main__.py  cli.py  config.py  extractor.py  renderer.py  utils.py
src/dbt_schema_gen/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
src/dbt_schema_gen/utils/: __init__.py  pathing.py  rate_limiter.py  tests.py  yaml_tools.py
